# Credit-Card-Default-Prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  application.py  demo.py  get_log.py  pyproject.toml  requirements.txt  setup.py
.ebextensions/: python.config
Current_Model_Metric_Info/: Current_Model_Metric_Info.csv  metric_info.csv
Documents/: DPR.pptx  High Level Design.docx  Low Level Design.docx  Wireframe.docx  ~$reframe.docx  ~$w Level Design.docx
config/: config.yaml  model.yaml  schema.yaml
notebook/: EDA.ipynb  bug.ipynb  example.ipynb  example2.ipynb  preprocessing.pkl  report.html  test1.ipynb
saved_models/20230714183912/: model.pkl
saved_models/20230716140110/: model.pkl
saved_models/20230717180049/: model.pkl
saved_models/20230721212644/: model.pkl
saved_models/20230722222800/: model.pkl
src/: exception.py  logger.py  utils.py
src/artifact/model_evaluation/: model_evaluation.yaml
src/cc_default_ml_nitin7478/: app.py  demo.py  requirements.txt  setup.py
src/cc_default_ml_nitin7478/Current_Model_Metric_Info/: Current_Model_Metric_Info.csv
src/cc_default_ml_nitin7478/config/: config.yaml  model.yaml  schema.yaml
src/cc_default_ml_nitin7478/notebook/: EDA.ipynb  bug.ipynb  example2.ipynb  report12.html  test.json  testt.py  (+2 more)
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/config/: configuration.py
src/constant/: __init__.py
src/entity/: artifact_entity.py  config_entity.py  model_factory.py  predictor.py
src/pipeline/: pipeline.py
src/util/: __init__.py
templates/: index.html
(+30 files in other folders)
