[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "cc_default_ml_nitin7478"
version = "0.0.5"
authors = [
  { name="Nitin Udmale", email="nitin7478@gmail.com" },
]
description = "My first moduler coding project , end to end machine learning pipeline for credit card default project"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



dependencies = [
    "dill=0.3.6",
    "evidently=0.3.3",
    "Flask=2.3.2",
    "gunicorn=20.1.0",
    "numba=0.57.1",
    "numpy=1.25.1",
    "pandas=2.0.3",
    "PyYAML=6.0",
    "requests=2.31.0",
    "scikit-learn=1.3.0",
    "urllib3=2.0.3",
    "xlrd=2.0.1", ]